.provarCaches/00D410000011HE0EAM/objects/rstk__symrpordassign__c.object
<CustomObject>
    <description>symrpordassign__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>id__c</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_addpgm__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>addpgm</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_addusr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>addusr</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_clientid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>clientid</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_hklock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Symrpordassign Heroku momentary Lock flag. If true, other processes should wait or abort.</description>
        <label>Symrpordassign Heroku Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_lmdatetime__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>lmdatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_lmpgm__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>lmpgm</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_lmusr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>lmusr</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_lstdivordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LSTDIVORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_lstdreqordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LSTDREQORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_lstinddmdordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LSTINDDMDORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_lstreqordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LSTREQORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_lstsiteordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LSTSITEORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__symrpordassign_lstwoordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LSTWOORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syordnumassign_lstsoagreeno__c</fullName>
        <description>This field is set with the Last Sales Agreement number  that is automatically generated when adding such an Agreement Number (which is the SOAGR  record)</description>
        <inlineHelpText>This field is set with the Last Sales Agreement number  that is automatically generated when adding such an Agreement Number (which is the SOAGR  record)</inlineHelpText>
        <label>LSTSOAGREENO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syordnumassign_lstsoordno__c</fullName>
        <description>This field is set with the Last Sales Order number  that is automatically generated when adding such a purchase order  (which is the SOHDR record)</description>
        <inlineHelpText>This field is set with the Last Sales Order number  that is automatically generated when adding such a purchase order  (which is the SOHDR record)</inlineHelpText>
        <label>LSTSOORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>MRP Order Assignment Numbers</label>
    <listViews>
        <fullName>rstk__Order_Number_Assign</fullName>
        <columns>NAME</columns>
        <columns>rstk__symrpordassign_lstdivordno__c</columns>
        <columns>rstk__symrpordassign_lstdreqordno__c</columns>
        <columns>rstk__symrpordassign_lstinddmdordno__c</columns>
        <columns>rstk__symrpordassign_lstreqordno__c</columns>
        <columns>rstk__symrpordassign_lstsiteordno__c</columns>
        <columns>rstk__syordnumassign_lstsoagreeno__c</columns>
        <columns>rstk__syordnumassign_lstsoordno__c</columns>
        <columns>rstk__symrpordassign_lstwoordno__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Order Number Assign</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__System_MRP_Order_Assign</fullName>
        <columns>NAME</columns>
        <columns>rstk__symrpordassign_lstdivordno__c</columns>
        <columns>rstk__symrpordassign_lstdreqordno__c</columns>
        <columns>rstk__symrpordassign_lstreqordno__c</columns>
        <columns>rstk__syordnumassign_lstsoagreeno__c</columns>
        <columns>rstk__syordnumassign_lstsoordno__c</columns>
        <columns>rstk__symrpordassign_lstwoordno__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>System MRP Order Assign</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SYMRPORDASSIGN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRP Order Assignment Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>